# dual-matfit

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  aniso_mat_fit.py  docker-compose.yml  environment.yml  gen_lab_plots.py  local_pipelines.sh  pyproject.toml  pytest.ini  setup.py
Results/M3-nh-ka-vol-glb/: glb_opt_mat_param_ipopt_v01.xlsx
Results/M3-nh-ka-vol-glb/rato_17/cauchy_robust_l2_alpha_0.001_c_40.0_nc15/: opt_mat_param_ipopt.parquet.gzip  opt_mat_param_ipopt.xlsx
Results/M3-nh-ka-vol-glb/rato_23/cauchy_robust_l2_alpha_0.001_c_40.0_nc15/: opt_mat_param_ipopt.parquet.gzip  opt_mat_param_ipopt.xlsx
Results/M3-nh-ka-vol-glb/rato_wt_183997/cauchy_robust_l2_alpha_0.001_c_40.0_nc15/: opt_mat_param_ipopt.parquet.gzip  opt_mat_param_ipopt.xlsx
Results/M3-nh-ka-vol-glb/rato_wt_184012/cauchy_robust_l2_alpha_0.001_c_40.0_nc15/: opt_mat_param_ipopt.parquet.gzip  opt_mat_param_ipopt.xlsx
Results/M3-nh-ka-vol-glb/rato_wt_184085/cauchy_robust_l2_alpha_0.001_c_40.0_nc15/: opt_mat_param_ipopt.parquet.gzip  opt_mat_param_ipopt.xlsx
docs/superpowers/plans/: 2026-04-12-phase1-restructuring.md  2026-04-12-phase2-module-upgrades.md  2026-04-12-phase3-new-modules.md  2026-04-12-phase4-test-restructure.md
docs/superpowers/specs/: 2026-04-12-paperhgo-migration-design.md
dualmatfit/: __init__.py  _jax_config.py  basinhopping.py  cost_cache.py  cost_functions.py  derivative.py  drivers.py  experimental.py  extension_solution.py  io_utils.py  ipopt.py  lambdify_builder.py  latex_post.py  least_square.py  log_contexts.py  logging_config.py  material_fit.py  material_law.py  optimization.py  path_manager.py  plot.py  rato_info.py  regularization.py  simplify.py  solution.py  tensor.py  utils.py  variational_form.py
dualmatfit/data/: __init__.py  experimental.py  rato_info.py
dualmatfit/fitting/: __init__.py  constants.py  core.py  covariance.py  identifiability.py  optimization.py  persistence.py  visualization.py
dualmatfit/formulation/: __init__.py  lambdify.py  material_law.py  simplify.py  tensor.py  variational.py
dualmatfit/optimization/: __init__.py  basinhopping.py  core.py  cost.py  drivers.py  ipopt.py  loss.py  regularization.py
dualmatfit/plotting/: __init__.py  analytical_visuals.py  experimental_visuals.py  parameters.py  plot_helpers.py  solution_visuals.py
dualmatfit/solvers/: __init__.py  barrier.py  derivative.py  extension.py  solution.py
dualmatfit/utils/: __init__.py  io_utils.py  ks.py  latex_post.py  log_contexts.py  logging_config.py  numeric.py  path_manager.py
instron_data/: final_data.h5  final_raw_data.xlsx
scripts/: __init__.py  _analytical_runtime.py  analyze_beta_identifiability.py  aniso_mat_fit.py  gen_lab_plots.py  plot_analytical_visuals.py  plot_experimental_visuals.py  precompute_paper_data.py  verify_covariance_theory.py  verify_huang_calibration.py
tests/: conftest.py  find_stuck.py  test_barrier.py  test_cost_cache.py  test_cost_functions.py  test_derivative.py  test_drivers.py  test_experimental.py  test_extension_solution.py  test_functions.py  test_integrated_cost_function.py  test_io_utils.py  test_jax_integration.py  test_lambdify_performance.py  test_latex_post.py  test_logging.py  test_numeric_utils.py  test_path_manager.py  test_plotting.py  test_regularization.py  test_solution.py  test_strain_energy.py  test_utils.py  test_variational_form.py  test_variational_form_derivative.py
tests/integration/: test_drivers.py  test_experimental.py  test_integrated_cost_function.py  test_jax_integration.py  test_plotting.py  test_plotting_scripts.py
tests/performance/: test_lambdify_performance.py
tests/unit/: test_analyze_beta_identifiability.py  test_code_review_fixes.py  test_cost_functions.py  test_covariance.py  test_derivative.py  test_drivers_optional_ipopt.py  test_extension_solution.py  test_functions.py  test_hessian_edge_cases.py  test_identifiability.py  test_io_utils.py  test_latex_post.py  test_logging.py  test_numeric_utils.py  test_path_manager.py  test_solution.py  test_strain_energy.py  test_variational_form.py
