[tool.poetry]
name = "dualmatfit"
version = "0.1.0"
description = "Dual Material Fitting for 1D"
authors = ["Rlahuerta <ricardolahuerta@gmail.com>"]
classifiers = [
    'License :: Other/Proprietary License',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pip = "^24.0"
numpy = "^2.2.0"
scipy = "^1.16.1"
pandas = "^2.3.1"
matplotlib = "^3.8.2"
sympy = "^1.14.0"
seaborn = "^0.12.0"
pathlib = "^1.0.1"
ipyopt = "^0.12.10"
tables = "^3.10.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.1.3"
latex = "^0.7.0"
pyarrow = "^21.0.0"
fastparquet = "^2023.4.0"
numexpr = "^2.11.0"
numba = "^0.61.2"
cython = "^3.1.2"
joblib = "^1.4.2"
dill = "^0.3.8"
pathos = "^0.3.2"
setuptools = "^74.1.2"
ipython = "^9.5.0"
jaxopt = "^0.8.5"
jax = "^0.7.0"
jaxlib = "^0.7.0"
multiprocess = "^0.70.17"
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
jax = "^0.7.0"
jaxlib = "^0.7.0"
nose2 = "^0.13.0"
mock = "^5.1.0"
coverage = "^7.6.3"
tox = "^4.6.4"
hypothesis = "^6.81.1"
pylint = "^3.2.7"
pipdeptree = "^2.23.3"
pytest = "^8.3.3"
pytest-gitignore = "^1.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.4.0"
parameterized = "^0.9.0"

[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
flake8-builtins = "^2.2.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.1.17"
mccabe = "^0.7.0"
pep8-naming = "^0.13.3"
safety = "^3.0.1"
ruff = "^0.11.7"

[tool.mypy]
warn_unused_configs = true
exclude = [
    "tests/", # Exclude the test directory
]

# Third-party untyped code:
[[tool.mypy.overrides]]
module = [
    "antlr4.*",
    "Cython.*",
    "flint.*",
    "gmpy.*",
    "gmpy2.*",
    "IPython.*",
    "lxml.*",
    "matchpy.*",
    "matplotlib.*",
    "mpmath.*",
    "numpy.*",
    "PIL.*",
    "pycosat.*",
    "pyglet.*",
    "pymc.*",
    "pymc3.*",
    "python-sat.*",
    "pytest.*", # You might want to ignore pytest itself
    "_pytest.*", # You might want to ignore internal pytest modules
    "sage.*",
    "scipy.*",
    "symengine.*",
    "aesara.*",
    "xml.*",
    "pydy.*",
    "theano.*",
    "multiset.*",
    "pysat.*",
    "bpython.*"
]
ignore_missing_imports = true

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "B015",  # Useless comparison: a == b rather than a = b.
    "C4",
    "E",
    "F",
    "FURB",
    "LOG",
    "PIE810",
    "PLE",
    "PLR1736",
    "PLW0602", # Global statement used but no assignment
    "SIM101",
    "SLOT",
    "TRY002",
]

# Ignore rules that currently fail on the SymPy codebase
lint.ignore = [
    "E401",  # Multiple imports on one line
    "E402",  # Module level import not at top of file
    "E501",  # Line too long (<LENGTH> > 88 characters)
    "E701",  # Multiple statements on one line (colon)
    "E702",  # Multiple statements on one line (semicolon)
    "E711",  # Comparison to `None` should be `cond is not None`
    "E712",  # Comparison to `<BOOL>` should be `cond is <BOOL>`
    "E713",  # Test for membership should be `not in`
    "E714",  # Test for object identity should be `is not`
    "E721",  # Do not compare types, use `isinstance()`
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "E741",  # Ambiguous variable name: `<VARIABLE>`
    "E743",  # Ambiguous function name: `<FUNCTION>`
    # Rules from the stable "FURB" set that are ignored. See #27897
    # Just to be safe, we'll ignore FURB161 until we drop support for Python 3.9
    "FURB161",  # Use of `bin({existing}).count('1')`
    "FURB187",  # Use of assignment of `reversed` on list `{name}`
]

# Exclude paths currently excluded in the flake8 configuration
exclude = [
    "tests/",
]

# Black default, although irrelevant with E501 ignored
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|_[a-zA-Z0-9_]*)$"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

#[[tool.poetry.source]]
#name = "jax_cuda_releases"
#url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
#priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"