[project]
name = "dualmatfit"
version = "0.1.0"
description = "Dual Material Fitting for 1D"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
    "matplotlib>=3.8.2",
    "numba>=0.61.2",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.1.3",
    "scipy>=1.16.1",
    "seaborn>=0.12.0",
    "sympy>=1.14.0",
    "tables>=3.10.2",
]

[project.optional-dependencies]
ipopt = [
    "ipyopt>=0.12.10",
]

[project.urls]
Repository = "https://github.com/Rlahuerta/dual-matfit"

[tool.mypy]
warn_unused_configs = true
exclude = [
    "tests/", # Exclude the test directory
    "scripts/", # Exclude the scripts directory
]

# Third-party untyped code:
[[tool.mypy.overrides]]
module = [
    "antlr4.*",
    "Cython.*",
    "flint.*",
    "gmpy.*",
    "gmpy2.*",
    "IPython.*",
    "lxml.*",
    "matchpy.*",
    "matplotlib.*",
    "mpmath.*",
    "numpy.*",
    "PIL.*",
    "pycosat.*",
    "pyglet.*",
    "pymc.*",
    "pymc3.*",
    "python-sat.*",
    "pytest.*", # You might want to ignore pytest itself
    "_pytest.*", # You might want to ignore internal pytest modules
    "sage.*",
    "scipy.*",
    "symengine.*",
    "aesara.*",
    "xml.*",
    "pydy.*",
    "theano.*",
    "multiset.*",
    "pysat.*",
    "bpython.*"
]
ignore_missing_imports = true

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "B015",  # Useless comparison: a == b rather than a = b.
    "C4",
    "E",
    "F",
    "FURB",
    "LOG",
    "PIE810",
    "PLE",
    "PLR1736",
    "PLW0602", # Global statement used but no assignment
    "SIM101",
    "SLOT",
    "TRY002",
]

# Ignore rules that currently fail on the SymPy codebase
lint.ignore = [
    "E401",  # Multiple imports on one line
    "E402",  # Module level import not at top of file
    "E501",  # Line too long (<LENGTH> > 88 characters)
    "E701",  # Multiple statements on one line (colon)
    "E702",  # Multiple statements on one line (semicolon)
    "E711",  # Comparison to `None` should be `cond is not None`
    "E712",  # Comparison to `<BOOL>` should be `cond is <BOOL>`
    "E713",  # Test for membership should be `not in`
    "E714",  # Test for object identity should be `is not`
    "E721",  # Do not compare types, use `isinstance()`
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "E741",  # Ambiguous variable name: `<VARIABLE>`
    "E743",  # Ambiguous function name: `<FUNCTION>`
    # Rules from the stable "FURB" set that are ignored. See #27897
    # Just to be safe, we'll ignore FURB161 until we drop support for Python 3.9
    "FURB161",  # Use of `bin({existing}).count('1')`
    "FURB187",  # Use of assignment of `reversed` on list `{name}`
]

# Exclude paths currently excluded in the flake8 configuration
exclude = [
    "tests/",
    "scripts/",
]

# Black default, although irrelevant with E501 ignored
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|_[a-zA-Z0-9_]*)$"

[build-system]
requires = ["setuptools>=74.1.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["dualmatfit*"]